chore : more changes

--- a/includes/modal_template.html
+++ b/includes/modal_template.html
@@ -4,6 +4,8 @@
         <div class="x-remove-modal">
             <p class="modal-close">&times;</p>
         </div>
+        <div class="row text-danger" ng-show="getSelectedCompany()==null">No company selected!</div>
+
         <div class="modal-window-p-download">
             <div class="border-same">
                 <h1>Claim Form</h1>
