--- a/includes/general_modal.html
+++ b/includes/general_modal.html
@@ -4,6 +4,8 @@
       <p class="modal-close">&times;</p>
     </div>
     <div class="modal-window-p-download">
+      <div class="row text-danger" ng-show="getSelectedCompany()==null">No company selected!</div>
+
       <div class="border-same">
         <h1>Claim Form</h1>
         <hr />
