--- a/includes/life_modal.html
+++ b/includes/life_modal.html
@@ -3,17 +3,20 @@
       <div class="x-remove-modal">
         <p class="modal-close">&times;</p>
       </div>
+      <div class="row text-danger" ng-show="getSelectedCompany()==null">No company selected!</div>
+
       <div class="modal-window-p-download">
         <div class="border-same">
           <h1>proposal Form</h1>
           <hr />
           <p>Term Assuarance</p>
           <hr />
-          <a
+          <!-- <a
             href="https://www.apainsurance.org/pdf/proposal/INDIVIDUAL%20LIFE%20SAVINGS.pdf"
             target="_blank"
             >Download</a
-          >
+          > -->
+          <div ng-include="'./includes/download_link_template.html'"></div>
         </div>
       </div>
     </div>
