--- a/includes/personal_modal.html
+++ b/includes/personal_modal.html
@@ -3,17 +3,15 @@
       <div class="x-remove-modal">
         <p class="modal-close">&times;</p>
       </div>
+      <div class="row text-danger" ng-show="getSelectedCompany()==null">No company selected!</div>
+
       <div class="modal-window-p-download">
         <div class="border-same">
           <h1>Claim Form</h1>
           <hr />
           <p>PA</p>
           <hr />
-          <a
-            href="https://www.apainsurance.org/pdf/claim/GPA%20CLAIM%20FORM.pdf"
-            target="_blank"
-            >Download</a
-          >
+          <div ng-include="'./includes/download_link_template.html'"></div>
         </div>
       </div>
     </div>
