--- a/ng/templates/header.component3.html
+++ b/ng/templates/header.component3.html
@@ -1,14 +1,11 @@
-<!-- header Start -->
 <header class="header-style-two">
   <div class="header-wrapper">
     <div class="header-top-area bg-gradient-reverse-color d-none d-lg-block">
       <div class="container">
         <div class="row">
           <div class="col-lg-6 header-top-left-part">
-            <span class="address"><i class="webexflaticon flaticon-placeholder-1"></i> Nssf Building
-              Nkurumah Road 4th Floor</span>
-            <span class="phone"><i class="webexflaticon flaticon-send"></i><a
-                href="mailto:info@vmax.co.ke">info@vmax.co.ke</a></span>
+            <span class="address"><i class="webexflaticon flaticon-placeholder-1"></i> Nssf Building Nkurumah Road 4th Floor</span>
+            <span class="phone"><i class="webexflaticon flaticon-send"></i><a href="mailto:info@vmax.co.ke">info@vmax.co.ke</a></span>
           </div>
           <div class="col-lg-6 header-top-right-part text-end">
             <ul class="social-links">
@@ -63,20 +60,18 @@
               </div>
               <div class="side-panel-logo mrb-30">
                 <a href="index.html">
-                  <img class="logo-style" src="img/LOGO.png" alt="" />
+                  <img class="logo-style" src="img/LOGO.png" alt="">
                 </a>
               </div>
               <div class="side-info mrb-30">
                 <div class="side-panel-element mrb-25">
                   <h4 class="mrb-10">Office Address</h4>
                   <ul class="list-items">
-                    <li><span class="fa fa-map-marker-alt mrr-10 text-primary-color"></span>Nssf
-                      Building Nkurumah Road 4th Floor</li>
-                    <li><span class="fas fa-envelope mrr-10 text-primary-color"></span><a
-                        href="mailto:info@vmax.co.ke">info@vmax.co.ke</a></li>
+                    <li><span class="fa fa-map-marker-alt mrr-10 text-primary-color"></span>Nssf Building Nkurumah Road 4th Floor</li>
+                    <li><span class="fas fa-envelope mrr-10 text-primary-color"></span><a href="mailto:info@vmax.co.ke">info@vmax.co.ke</a></li>
                     <li><span class="fas fa-phone-alt mrr-10 text-primary-color"></span>
-                      <a href="tel:0705226770">+254 705 226 770</a> <br>/
-                      <a href="tel:0720329069">+254 720 329 069</a> /
+                      <a href="tel:0705226770">+254 705 226 770</a> <br>/ 
+                      <a href="tel:0720329069">+254 720 329 069</a> / 
                       <a href="tel:0735329069">+254 735 329 069</a>
                     </li>
                   </ul>
@@ -84,18 +79,12 @@
                 <div class="side-panel-element mrb-30">
                   <h4 class="mrb-15">Pintarest</h4>
                   <ul class="pintarest-list">
-                    <li><a href="#"><img class="img-full" src="images/side-panel/1.jpg"
-                          alt=""></a></li>
-                    <li><a href="#"><img class="img-full" src="images/side-panel/2.jpg"
-                          alt=""></a></li>
-                    <li><a href="#"><img class="img-full" src="images/side-panel/3.jpg"
-                          alt=""></a></li>
-                    <li><a href="#"><img class="img-full" src="images/side-panel/4.jpg"
-                          alt=""></a></li>
-                    <li><a href="#"><img class="img-full" src="images/side-panel/5.jpg"
-                          alt=""></a></li>
-                    <li><a href="#"><img class="img-full" src="images/side-panel/6.jpg"
-                          alt=""></a></li>
+                    <li><a href="#"><img class="img-full" src="images/side-panel/1.jpg" alt=""></a></li>
+                    <li><a href="#"><img class="img-full" src="images/side-panel/2.jpg" alt=""></a></li>
+                    <li><a href="#"><img class="img-full" src="images/side-panel/3.jpg" alt=""></a></li>
+                    <li><a href="#"><img class="img-full" src="images/side-panel/4.jpg" alt=""></a></li>
+                    <li><a href="#"><img class="img-full" src="images/side-panel/5.jpg" alt=""></a></li>
+                    <li><a href="#"><img class="img-full" src="images/side-panel/6.jpg" alt=""></a></li>
                   </ul>
                 </div>
               </div>
@@ -108,38 +97,36 @@
               </ul>
             </div>
             <div class="main-menu f-right">
-              <nav id="mobile-menu-right">
+              <nav id="mobile-menu-right" style="display: block;">
                 <ul>
                   <li class="has-sub">
-                  <a href="/" class="hover">Home</a>
+                    <a href="#" style="border-bottom: 4px solid #FAB758;">Home</a>
                   </li>
                   <li class="has-sub">
-                  <a href="#">Covers &#8675;</a>
-                  <ul class="sub-menu" style="border-top: 4px solid #FAB758;">
-                    <li><a href="motorinsurance.html">Motor Insurance</a></li>
-                    <li><a href="medicalandtravel.html">Medical Insurance</a></li>
-                    <li><a href="medicalandtravel.html">Travel Insurance</a></li>
-                    <li><a href="general.html">Domestic Package / Home Insurance</a></li>
-                    <li><a href="general.html">Marine Insurance</a></li>
-                    <li><a href="business.html">Business Insurance</a></li>
+                    <a href="#">Covers ⇣</a>
+                    <ul class="sub-menu" style="border-top: 4px solid #FAB758;">
+                      <li><a href="motorinsurance.html">Motor Insurance</a></li>
+                      <li><a href="medicalandtravel.html">Medical Insurance</a></li>
+                      <li><a href="medicalandtravel.html">Travel Insurance</a></li>
+                      <li><a href="general.html">Domestic Package / Home Insurance</a></li>
+                      <li><a href="general.html">Marine Insurance</a></li>
+                      <li><a href="business.html">Business Insurance</a></li>
                     </ul>
                   </li>
                   <li>
-                  <a href="/claimforms.html" style="border-bottom: 4px solid #fab758"
-                    >Claim Forms</a
-                  >
+                    <a href="claimforms.html" class="hover">Claim Forms</a>
                   </li>
                   <li>
-                  <a href="report.html" class="hover">Report Claim</a>
+                    <a href="report.html" class="hover">Report Claim</a>
                   </li>
                   <li class="has-sub">
-                  <a href="getquote.html" class="hover">Get Quote</a>
+                    <a href="getquote.html" class="hover">Get Quote</a>
                   </li>
                   <li class="has-sub right-view">
-                  <a href="contact.html" class="hover">Contact</a>
+                    <a href="contact.html" class="hover">Contact</a>
                   </li>
                 </ul>
-                </nav>
+              </nav>
             </div>
           </div>
         </div>
@@ -147,4 +134,3 @@
     </div>
   </div>
 </header>
-<!-- header End -->
